--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-hola mundo!
+<!DOCTYPE html>
+<html>
+<head>
+<title>Hola Mundo</title>
+</head>
+<body>
+Hola Mundo, Comment de Ana Mayela
+</body>
+</html>
